# SnapPy

./: CMakeLists.txt
cython/: SnapPy.pxi
cython/core/: triangulation.pyx
kernel/headers/: SnapPea.h  triangulation_io.h
kernel/kernel_code/: simplify_triangulation.c
